...
      controller: _scrollController,
      physics: BouncingScrollPhysics(),
      slivers: [
        SliverAppBar(
            expandedHeight: 80.0,
            flexibleSpace: FlexibleSpaceBar(
                title: Text("Movie Finder", key: Key("Title")),
                background: Image.asset(
                  "assets/images/banner.jpg",
                  fit: BoxFit.cover,
                ))),
        SliverPadding(
          padding: EdgeInsets.symmetric(horizontal: 10),
          sliver: SliverPersistentHeader(
            floating: true,
            pinned: true,
            delegate: _SearchBarDelegate(
              searchBar: Card(
                child: TextField(
                  key: Key("DiscoverTextField"),
                  controller: _textController,
                  decoration: InputDecoration(
                    prefixIcon: Icon(Icons.search),
                    hintText: 'Avengers',
                  ),
                  onSubmitted: (value) {
...
