...
            key: Key("DiscoverPage"),
            color: Color(0xfffaf9f5),
          ),
          Icon(
            Icons.star,
            size: 30,
            key: Key("FavoritePage"),
            color: Color(0xfffaf9f5),
          ),
        ],
        onTap: _onItemTapped,
      ),
    );
...
